# aga-node-template

pallets/template/: Cargo.toml
runtime/: Cargo.toml
